change populate scale in an attempt to make scalable read

--- a/Data-Preprocessing-Copy1.ipynb
+++ b/Data-Preprocessing-Copy1.ipynb
@@ -3871,6 +3871,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on RemoteMonitor in module keras.callbacks object:\n",
+      "\n",
+      "class RemoteMonitor(Callback)\n",
+      " |  Callback used to stream events to a server.\n",
+      " |  \n",
+      " |  Requires the `requests` library.\n",
+      " |  \n",
+      " |  # Arguments\n",
+      " |      root: root url to which the events will be sent (at the end\n",
+      " |          of every epoch). Events are sent to\n",
+      " |          `root + '/publish/epoch/end/'`. Calls are HTTP POST,\n",
+      " |          with a `data` argument which is a JSON-encoded dictionary\n",
+      " |          of event data.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      RemoteMonitor\n",
+      " |      Callback\n",
+      " |      __builtin__.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, root='http://localhost:9000')\n",
+      " |  \n",
+      " |  on_epoch_end(self, epoch, logs={})\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from Callback:\n",
+      " |  \n",
+      " |  on_batch_begin(self, batch, logs={})\n",
+      " |  \n",
+      " |  on_batch_end(self, batch, logs={})\n",
+      " |  \n",
+      " |  on_epoch_begin(self, epoch, logs={})\n",
+      " |  \n",
+      " |  on_train_begin(self, logs={})\n",
+      " |  \n",
+      " |  on_train_end(self, logs={})\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from Callback:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(keras.callbacks.RemoteMonitor())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-359-c4504c4675a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mremote_log\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRemoteMonitor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'root_url'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'/publish/epoch/end/'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'path'"
+     ]
+    }
+   ],
+   "source": [
+    "remote_log = keras.callbacks.RemoteMonitor(root='root_url', path='/publish/epoch/end/')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
