--- a/Data-Preprocessing.ipynb
+++ b/Data-Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,12 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using gpu device 0: GeForce GTX 980 (CNMeM is disabled, cuDNN 5103)\n",
+      "/usr/local/lib/python2.7/dist-packages/theano/sandbox/cuda/__init__.py:600: UserWarning: Your cuDNN version is more recent than the one Theano officially supports. If you see any problems, try updating Theano or downgrading cuDNN to version 5.\n",
+      "  warnings.warn(warn)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cross_validation import train_test_split\n",
     "np.random.seed(1337)\n",
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -2522,7 +2532,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -2626,19 +2636,55 @@
    },
    "outputs": [],
    "source": [
+    "import sqlite3\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def init_sqlite3(dbname):\n",
+    "    conn = sqlite3.connect(dbname)\n",
+    "    return conn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "db_conn = init_sqlite3(data_dir+db_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "disk_engine = create_engine('sqlite:///'+data_dir+db_name,convert_unicode=True)\n",
     "disk_engine.raw_connection().connection.text_factory = str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "table = 'data_trim'"
+    "table = 'auth'"
    ]
   },
   {
@@ -2650,9 +2696,12 @@
    },
    "outputs": [],
    "source": [
+    "t0 = time.time()\n",
     "df = pd.read_sql_query('select distinct FRD_IND,count(distinct acct_id) as num_usr '\n",
     "                       'from {table} '\n",
     "                       'group by FRD_IND'.format(table=table), disk_engine)\n",
+    "t1 = time.time()\n",
+    "print str(t1-t0)\n",
     "df\n"
    ]
   },
@@ -2663,6 +2712,34 @@
     "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "t0 = time.time()\n",
+    "df = pd.read_sql_query('select distinct FRD_IND,count(distinct acct_id) as num_usr '\n",
+    "                       'from {table} '\n",
+    "                       'group by FRD_IND'.format(table=table), db_conn)\n",
+    "t1 = time.time()\n",
+    "print str(t1-t0)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "483"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['num_usr'][0]"
    ]
